# iotzio-rust

./: .gitignore  LICENSE  readme.md  rustfmt.toml
examples/api-functions/: Cargo.toml  readme.md
examples/webassembly-template/: Cargo.toml  index.html  readme.md
examples/webassembly-template/src/: lib.rs
examples/webassembly-template/src/bootstrap/: mod.rs
iotzio/: Cargo.toml  LICENSE  readme.md  uniffi.toml
iotzio/src/: lib.rs
iotzio/src/backend/: browser.rs  desktop.rs  mod.rs
iotzio/src/backend/android/: backend.rs  context.rs  mod.rs  permissions.rs  utils.rs
iotzio/src/backend/android/app/: mod.rs  pending_intent.rs
iotzio/src/backend/android/content/: context.rs  intent.rs  intent_filter.rs  mod.rs
iotzio/src/backend/android/hardware/: mod.rs
iotzio/src/backend/android/hardware/usb/: mod.rs  usb_constants.rs  usb_device.rs  usb_device_connection.rs  usb_endpoint.rs  usb_interface.rs  usb_manager.rs
iotzio/src/backend/android/os/: build_version.rs  mod.rs
iotzio/src/communication/: board_info.rs  command.rs  device_report.rs  fatal_error.rs  host_report.rs  mod.rs  protocol_error.rs  response.rs  version.rs
iotzio/src/iotzio/: delay.rs  initialization_error.rs  iotzio.rs  iotzio_info.rs  iotzio_manager.rs  iotzio_service.rs  mod.rs
iotzio/src/modules/: mod.rs  modules_error.rs
iotzio/src/modules/i2c_bus/: i2c0_scl_pin.rs  i2c0_sda_pin.rs  i2c1_scl_pin.rs  i2c1_sda_pin.rs  i2c_bus.rs  i2c_bus_module_error.rs  i2c_config.rs  mod.rs  service.rs
iotzio/src/modules/input_pin/: input_pin.rs  input_pin_module_error.rs  interrupt_trigger.rs  mod.rs  service.rs  signal_type.rs
iotzio/src/modules/output_pin/: mod.rs  output_pin.rs  output_pin_module_error.rs  service.rs
iotzio/src/peripherals/: mod.rs
iotzio/src/peripherals/gpio/: drive.rs  gpio_pin.rs  level.rs  mod.rs  pull.rs  slew_rate.rs
iotzio/src/peripherals/i2c/: i2c_bus_number.rs  i2c_error.rs  i2c_identifier.rs  mod.rs
iotzio/src/socket/: mod.rs  runtime_identifier.rs  socket.rs  socket_service.rs
