[package]
name = "webassembly-template"
version = "0.1.0"
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
iotzio = "0.1.0"
log = "0.4"
anyhow = "1.0"
async-std = "1.13"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "MouseEvent"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
